--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "preview": "vite preview",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "*.{vue,js,ts}": "eslint --fix"
+  },
   "dependencies": {
     "axios": "^0.24.0",
     "element-plus": "^1.2.0-beta.6",
@@ -24,13 +27,14 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.2.0",
+    "husky": "^6.0.0",
     "less": "^4.1.2",
+    "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
     "sass": "^1.45.0",
     "stylus": "^0.55.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.1",
-    "vue-tsc": "^0.29.8",
-    "husky": "^7.0.0"
+    "vue-tsc": "^0.29.8"
   }
 }
