--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "lint-staged": {
     "*.{vue,js,ts}": "eslint --fix"
   },
+  "private": true,
   "dependencies": {
+    "@vitejs/plugin-vue": "^2.0.0",
     "axios": "^0.24.0",
     "element-plus": "^1.2.0-beta.6",
+    "vite": "^2.7.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
@@ -20,9 +23,9 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "@vitejs/plugin-vue": "^2.0.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
+    "cz-customizable": "^6.3.0",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -36,7 +39,6 @@
     "sass": "^1.45.0",
     "stylus": "^0.55.0",
     "typescript": "^4.4.4",
-    "vite": "^2.7.1",
     "vue-tsc": "^0.29.8"
   },
   "config": {
